--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
 
     <section class="principal">
         <div class="conteudo">
-            <h1><bdi>Olá 👋,</bdi><br> eu sou <span>Renan Morais</span>.</h1>
-            <p>Estudante da <big class="destaque"><abbr title="Uma das Universidades mais renomadas do Brasil na área de engenharia e tecnologia!">Universidade Federal de Itajubá</abbr></big><br>e futuro <big class="destaque">Desenvolvedor Full-Stack</big>.<span class="effect"></span></p>
-            <a href="#" class="botao efeito-cursor">Ver Projetos</a>
+            <h1><bdi>Olá 👋,</bdi><br><b>eu sou</b> <span>Renan Morais</span>.</h1>
+            <p>Estudante da <big class="destaque"><abbr title="Uma das Universidades mais renomadas do Brasil na área de engenharia e tecnologia!" class="facul">Universidade Federal de Itajubá</abbr></big><br>e futuro <big class="destaque">Desenvolvedor Full-Stack</big>.<span class="effect"></span></p>
+            <a href="#" class="botao efeito-cursor efeito-buton">Ver Projetos</a>
         </div>
         <img src="principal.png" class="img-apresentacao">
     </section>
