--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     </div>
         <ul>
          <li class="efeito-menu"><a href="#" class="menu">Início</a></li>
-         <li class="efeito-menu"><a href="#" class="menu">Projetos</a></li>
+         <li class="efeito-menu"><a href="https://github.com/moraissdev" class="menu" target="_blank">Projetos</a></li>
          <li class="efeito-menu"><a href="#" class="menu">Sobre</a></li>
-         <li class="efeito-menu"><a href="https://api.whatsapp.com/send?phone=5535991678166" class="menu">Contato</a></li>
+         <li class="efeito-menu"><a href="https://api.whatsapp.com/send?phone=5535991678166" class="menu" target="_blank">Contato</a></li>
          <li class="efeito-menu"><a href="https://www.linkedin.com/in/renansmorais/" class="menu" target="_blank"><span class="link-menu">LinkedIn</span></a></li>
         </ul>
     </header>
@@ -24,7 +24,7 @@
         <div class="conteudo">
             <h1><bdi>Olá 👋,</bdi><br><b>eu sou</b> <span>Renan Morais</span>.</h1>
             <p>Estudante da <big class="destaque"><abbr title="Uma das Universidades mais renomadas do Brasil na área de engenharia e tecnologia!" class="facul">Universidade Federal de Itajubá</abbr></big><br>e futuro <big class="destaque">Desenvolvedor Full-Stack</big>.<span class="effect"></span></p>
-            <a href="#" class="botao efeito-cursor efeito-buton">Ver Projetos</a>
+            <a href="https://github.com/moraissdev" class="botao efeito-cursor efeito-buton" target="_blank">Ver Projetos</a>
         </div>
         <img src="principal.png" class="img-apresentacao">
     </section>
