--- a/index.html
+++ b/index.html
@@ -79,9 +79,9 @@
                 <p>Além disso, fui enxadrista profissional, conquistando títulos brasileiros e me destacando em torneios internacionais, incluindo a sétima colocação no Campeonato Mundial Escolar e o terceiro lugar no Pan-Americano. Em 2023, iniciei um projeto para desenvolver um e-commerce de calçados esportivos, o que me incentivou a aprender e aplicar CSS para melhorar a aparência do site.</p>
 
                 <div class="habilidades">
-                    <span class="tag-habilidades efeito-cursor">HTML5</span>
+                    <span class="tag-habilidades efeito-cursor">HTML</span>
                     <span class="tag-habilidades efeito-cursor">CSS</span>
-                    <span class="tag-habilidades efeito-cursor">VSCODE</span>
+                    <span class="tag-habilidades efeito-cursor">VS CODE</span>
                     <span class="tag-habilidades efeito-cursor">JETBRAINS</span>
                 </div>
             </div>
@@ -95,16 +95,16 @@
 
         <div class="secao-aluno-devclub">
             <h3 class="titulo-aluno-devclub">Aluno do DevClub</h3>
-            <h3 class="descricao-aluno-devclub">Trilha DevClub Full-Stack</h3>
+            <h3 class="descricao-aluno-devclub">DevClub Full-Stack</h3>
             <br>
             <p class="texto-aluno-devclub">Ingressei no Dev Club em 05/03/2025 com o objetivo de me tornar Desenvolvedor Full-Stack. Durante o curso, terei aulas sobre diversas linguagens demandadas pelo mercado. Ao final de cada módulo, desenvolverei um projeto utilizando a linguagem aprendida para adicioná-lo ao meu portfólio e comprovar meu domínio sobre ela.<br><span class="devclub-modulos"> Módulos que terei no curso:</span></p>
 
             <div class="modulos-curso">
-                <span class="modulos-curso-devclub efeitos-modulos-curso">Git & GitHub</span>
-                <span class="modulos-curso-devclub efeitos-modulos-curso">JavaScript</span>
-                <span class="modulos-curso-devclub efeitos-modulos-curso">Node.js</span>
-                <span class="modulos-curso-devclub efeitos-modulos-curso">React</span>
-                <span class="modulos-curso-devclub efeitos-modulos-curso">TypeScript</span>
+                <span class="modulos-curso-devclub efeito-modulo-curso">Git & GitHub</span>
+                <span class="modulos-curso-devclub efeito-modulo-curso">JavaScript</span>
+                <span class="modulos-curso-devclub efeito-modulo-curso">Node.js</span>
+                <span class="modulos-curso-devclub efeito-modulo-curso">React</span>
+                <span class="modulos-curso-devclub efeito-modulo-curso">TypeScript</span>
             </div>
 
 
@@ -114,7 +114,7 @@
     </div>
 
     <section class="secao">
-        <h2 class="titulo-secao">Contato</h2>
+        <h2 class="titulo-secao">Minhas Redes</h2>
 
 
     <div class="botoes-contato">
