--- a/index.html
+++ b/index.html
@@ -13,10 +13,7 @@
     <header>
         <div>
             <h1>
-                <span class="titulo-pagina">&lt;</span>
-                <span class="titulo-big">Port</span>
-                <span class="titulo-pagina">fólio</span>
-                <span class="titulo-pagina">&gt;</span>
+                <h1><span class="titulo-pagina">&lt;</span><span class="titulo-big">Port</span><span class="titulo-pagina">fólio&gt;</span></h1>
             </h1>
         </div>
         
