--- a/index.html
+++ b/index.html
@@ -48,28 +48,28 @@
 
         <div class="grade-projetos">
             <div class="card-projeto efeito-cursor">
-                <img class="img-projeto" src="img/projetoemprogresso.png" height="250px" height="200px">
+                <img class="img-projeto" src="img/wecare.png" height="250px" height="200px">
                 <div class="info-projeto efeito-cursor">
-                    <h3>"Nome do Projeto"</h3>
-                    <p>Descrição do projeto.</p>
-                    <a href="#">Ver Projeto →</a>
+                    <h3>Cuidados com os Pets</h3>
+                    <p>Página ilustrativa.</p>
+                    <a href="https://github.com/moraissdev/wecare">Ver Projeto →</a>
+                </div>
+            </div>
+
+            <div class="card-projeto efeito-cursor">
+                <img class="img-projeto" src="img/widecoverage.png" height="250px" height="200px">
+                <div class="info-projeto efeito-cursor">
+                    <h3>Facilitar o Turismo Urbano</h3>
+                    <p>Página ilustrativa.</p>
+                    <a href="https://github.com/moraissdev/widecoverage">Ver Projeto →</a>
                 </div>
             </div>
 
             <div class="card-projeto efeito-cursor">
                 <img class="img-projeto" src="img/projetoemprogresso.png" height="250px" height="200px">
                 <div class="info-projeto efeito-cursor">
-                    <h3>"Nome do Projeto"</h3>
-                    <p>Descrição do projeto.</p>
-                    <a href="#">Ver Projeto →</a>
-                </div>
-            </div>
-
-            <div class="card-projeto efeito-cursor">
-                <img class="img-projeto" src="img/projetoemprogresso.png" height="250px" height="200px">
-                <div class="info-projeto efeito-cursor">
-                    <h3>"Nome do Projeto"</h3>
-                    <p>Descrição do projeto.</p>
+                    <h3>Tela de Login</h3>
+                    <p>Em construção.</p>
                     <a href="#">Ver Projeto →</a>
                 </div>
             </div>
