--- a/index.html
+++ b/index.html
@@ -12,9 +12,7 @@
 <body>
     <header>
         <div>
-            <h1>
                 <h1><span class="titulo-pagina">&lt;</span><span class="titulo-big">Port</span><span class="titulo-pagina">fólio&gt;</span></h1>
-            </h1>
         </div>
         
         <ul>
@@ -33,7 +31,7 @@
 
     <section class="principal">
         <div class="conteudo">
-            <h2><bdi>Olá 👋,</bdi><br><b>eu sou</b> <span>Renan Morais</span>.</h2>
+            <h2><bdi>Olá,</bdi><br><b>eu sou</b> <span>Renan Morais</span>.</h2>
             <p>Estudante da <big class="destaque"><abbr
                         title="Uma das Universidades mais renomadas do Brasil na área de engenharia e tecnologia!"
                         class="facul">Universidade Federal de Itajubá</abbr></big><br>e futuro <big
@@ -93,15 +91,13 @@
                     objetivo é me tornar um Desenvolvedor Full-Stack, complementando minha formação com cursos
                     extracurriculares. Desde criança, sou apaixonado por tecnologia e números.</p>
                 <p>Além disso, fui enxadrista profissional, conquistando títulos brasileiros e me destacando em torneios
-                    internacionais, incluindo a sétima colocação no Campeonato Mundial Escolar e o terceiro lugar no
-                    Pan-Americano. Em 2023, iniciei um projeto para desenvolver um e-commerce de calçados esportivos, o
+                    internacionais. Em 2023, iniciei um projeto para desenvolver um e-commerce de calçados esportivos, o
                     que me incentivou a aprender e aplicar CSS para melhorar a aparência do site.</p>
 
                 <div class="habilidades">
                     <span class="tag-habilidades efeito-cursor">HTML</span>
                     <span class="tag-habilidades efeito-cursor">CSS</span>
                     <span class="tag-habilidades efeito-cursor">VS CODE</span>
-                    <span class="tag-habilidades efeito-cursor">JETBRAINS</span>
                 </div>
             </div>
         </div>
@@ -116,18 +112,15 @@
             <h3 class="titulo-aluno-devclub">Aluno do DevClub</h3>
             <h3 class="descricao-aluno-devclub">DevClub Full-Stack</h3>
             <br>
-            <p class="texto-aluno-devclub">Ingressei no Dev Club em 05/03/2025 com o objetivo de me tornar Desenvolvedor
-                Full-Stack. Durante o curso, terei aulas sobre diversas linguagens demandadas pelo mercado. Ao final de
-                cada módulo, desenvolverei um projeto utilizando a linguagem aprendida para adicioná-lo ao meu portfólio
-                e comprovar meu domínio sobre ela.<br><span class="devclub-modulos"> Módulos que terei no curso:</span>
+            <p class="texto-aluno-devclub">Ingressei no Dev Club em 05/03/2025 com o objetivo de me tornar Desenvolvedor Full-Stack. Durante o curso, terei aulas sobre diversas linguagens demandadas pelo mercado. Ao final de cada conteúdo, desenvolverei um projeto utilizando a linguagem aprendida para adicioná-lo ao meu portfólio e comprovar meu domínio sobre ela.<br><span class="devclub-modulos"> Módulos que farei no curso:</span>
             </p>
 
             <div class="modulos-curso">
-                <span class="modulos-curso-devclub efeito-modulo-curso">Git & GitHub</span>
-                <span class="modulos-curso-devclub efeito-modulo-curso">JavaScript</span>
-                <span class="modulos-curso-devclub efeito-modulo-curso">Node.js</span>
-                <span class="modulos-curso-devclub efeito-modulo-curso">React</span>
-                <span class="modulos-curso-devclub efeito-modulo-curso">TypeScript</span>
+                <span class="modulos-curso-devclub efeito-cursor">Git & GitHub</span>
+                <span class="modulos-curso-devclub efeito-cursor">JavaScript</span>
+                <span class="modulos-curso-devclub efeito-cursor">Node.js</span>
+                <span class="modulos-curso-devclub efeito-cursor">React</span>
+                <span class="modulos-curso-devclub efeito-cursor">TypeScript</span>
             </div>
 
 
