--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
             <li class="efeito-menu"><a href="https://www.linkedin.com/in/renansmorais/" class="menu"target="_blank"><span class="link-menu">LinkedIn</span></a></li>
         </ul>
     </header>
+    <hr class="header-border">
 
 
     <section class="principal">
@@ -46,7 +47,7 @@
 
         <div class="grade-projetos">
             <div class="card-projeto efeito-cursor">
-                <img class="img-projeto" src="img/wecare.png" height="250px" height="200px">
+                <img class="img-projeto" src="img/Site preview.png" height="250px" height="200px">
                 <div class="info-projeto efeito-cursor">
                     <h3>Cuidados com os Pets</h3>
                     <p>Página ilustrativa.</p>
@@ -55,7 +56,7 @@
             </div>
 
             <div class="card-projeto efeito-cursor">
-                <img class="img-projeto" src="img/widecoverage.png" height="250px" height="200px">
+                <img class="img-projeto" src="img/Site preview (1).png" height="250px" height="200px">
                 <div class="info-projeto efeito-cursor">
                     <h3>Facilitar o Turismo Urbano</h3>
                     <p>Página ilustrativa.</p>
@@ -191,9 +192,6 @@
     document.addEventListener('mousemove', function (info) {
         cursor.style.left = info.clientX + 'px'
         cursor.style.top = info.clientY + 'px'
-
     })
-
 </script>
-
 </html>
