--- a/index.html
+++ b/index.html
@@ -175,9 +175,9 @@
             </a>
         </div>
     </section>
-
+<hr class="footer-border">
     <footer>
-        <p>Copyright © 2025 <rodape class="rodape-site"><a href="#" class="rodape-link">moraissdev.com.br</a></rodape>.
+        <p>© 2025 <rodape class="rodape-site"><span class="rodape-nome">Renan Morais</span></rodape>.
             Todos os direitos reservados.</p>
         <p>Desenvolvido por <rodape class="rodape-site">Renan Morais</rodape>.</p>
     </footer>
